# Solana-Keygen-Web

./: .gitignore  README.md  components.json  eslint.config.js  index.html  jest.config.cjs  knip.config.ts  package.json  tsconfig.json  vite.config.js  vite.config.ts
src/: App.tsx  vite-env.d.ts  worker.ts
src/__mocks__/: wasm_lib.js
src/app/: Layout.tsx
src/components/ui/: progress.tsx  switch.tsx
src/entities/object-comparison/model/: types.ts
src/entities/solana-keypair/: types.ts
src/features/csv-export/ui/: ErrorDisplay.tsx  ResultsDisplay.tsx
src/features/csv-parse/model/: detectDelimiter.ts  useCsvParser.ts
src/features/csv-parse/ui/: CsvInput.tsx  ParseControls.tsx
src/features/csv-upload/ui/: SampleSelector.tsx
src/features/json-formatter/ui/: JsonFormatButton.tsx
src/features/object-compare/model/: useObjectCompare.ts
src/features/object-compare/ui/: ComparisonResult.tsx  SampleButtons.tsx
src/features/vanity-search/model/: useVanitySearch.test.ts  useVanitySearch.ts
src/pages/: index.ts
src/pages/compare/ui/: ComparePage.tsx
src/pages/vanity/: index.ts
src/shared/api/: index.ts  useWasmWorker.ts  useWorkerFn.ts  useWorkerTask.ts  wasm-loader.ts  workerFactory.ts
src/shared/lib/: useCsvParser.ts  useTheme.ts
src/shared/types/: index.ts  wasm.ts
src/test/: setup.ts
src/test/hooks/: useWasmWorker.test.ts
test/lib/: mapToObject.test.ts  wasm-loader.test.ts
wasm/: Cargo.toml
wasm/pkg/: package.json  wasm_lib.d.ts  wasm_lib_bg.js  wasm_lib_bg.wasm  wasm_lib_bg.wasm.d.ts
wasm/src/: data.rs  lib.rs  vanity.rs
(+9 files in other folders)
