[package]
name = "wasm-lib"
version = "0.3.0"
edition = "2021"
description = "WASM core for Solana Keygen Web — vanity address generation and utilities"
repository = "https://github.com/vvs-jkr/solana-keygen-web"
license = "MIT"
authors = ["solana-keygen-web"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
# Core WASM bindings
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.66"
web-sys = { version = "0.3.66", features = [
  "console",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"

# Data processing - только CSV
csv = "1.3"

# Solana Vanity Address Generator
ed25519-dalek = { version = "2", features = ["rand_core"] }
bs58          = "0.5"
rand          = "0.8"
getrandom     = { version = "0.2", features = ["js"] }

# Memory optimization
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }

# Utilities
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false

[profile.dev]
opt-level = 1
debug = true
